src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Assortment_ID__c</fullName>
        <label>Assortment ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assortment__c</fullName>
        <label>Assortment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area_ID__c</fullName>
        <label>Business Area ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area_Name__c</fullName>
        <label>Business Area Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Origin__c</fullName>
        <label>Country of Origin</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Three_ID__c</fullName>
        <label>Dummy Three ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Three_Name__c</fullName>
        <label>Dummy Three Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_ID__c</fullName>
        <externalId>true</externalId>
        <label>Global ID</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lifecycle__c</fullName>
        <label>Lifecycle</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logistics_Product_Category__c</fullName>
        <description>Logistik level 2</description>
        <label>Logistics Product Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logistics_Service_Area__c</fullName>
        <label>Logistics Service Area</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marked_for_Deletion__c</fullName>
        <label>Marked for Deletion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nordic_Product__c</fullName>
        <label>Nordic Product</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Article_ID__c</fullName>
        <label>Product/Article ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_ID__c</fullName>
        <label>Product Group ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Level_4_ID__c</fullName>
        <label>Product (Level 4) ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Level_4_Name__c</fullName>
        <label>Product (Level 4) Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <label>Sales Area</label>
        <picklist>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO91</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO92</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3670</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0630</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0540</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Hierarchy_Parent__c</fullName>
        <label>Source Hierarchy Parent</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Product_Type__c</columns>
        <columns>Country_of_Origin__c</columns>
        <columns>Sales_Area__c</columns>
        <columns>Business_Area_Name__c</columns>
        <columns>Business_Area_ID__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Product_Group_ID__c</columns>
        <columns>Product_Article_ID__c</columns>
        <columns>Assortment__c</columns>
        <columns>Assortment_ID__c</columns>
        <columns>Dummy_Three_ID__c</columns>
        <columns>Dummy_Three_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>Article</value>
        </filters>
        <filters>
            <field>PRODUCT2.NAME</field>
            <operation>contains</operation>
            <value>DPD</value>
        </filters>
        <label>Gitte</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Assortments</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Product_Article_ID__c</columns>
        <columns>Product_Type__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Sales_Area__c</columns>
        <columns>Business_Area_Name__c</columns>
        <columns>Business_Area_ID__c</columns>
        <columns>Assortment__c</columns>
        <columns>Assortment_ID__c</columns>
        <columns>Dummy_Three_Name__c</columns>
        <columns>Dummy_Three_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>Assortment</value>
        </filters>
        <label>All Assortments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_BE_DK_Product_Groups</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Product_Article_ID__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Sales_Area__c</columns>
        <columns>Business_Area_Name__c</columns>
        <columns>Business_Area_ID__c</columns>
        <columns>Assortment__c</columns>
        <columns>Assortment_ID__c</columns>
        <columns>Dummy_Three_Name__c</columns>
        <columns>Dummy_Three_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>Product Group</value>
        </filters>
        <filters>
            <field>Sales_Area__c</field>
            <operation>equals</operation>
            <value>PDK BE</value>
        </filters>
        <label>All BE DK Product Groups</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_LO_DK_Product_Groups</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Product_Article_ID__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Sales_Area__c</columns>
        <columns>Business_Area_Name__c</columns>
        <columns>Business_Area_ID__c</columns>
        <columns>Assortment__c</columns>
        <columns>Assortment_ID__c</columns>
        <columns>Dummy_Three_Name__c</columns>
        <columns>Dummy_Three_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>Product Group</value>
        </filters>
        <filters>
            <field>Sales_Area__c</field>
            <operation>equals</operation>
            <value>LO DK</value>
        </filters>
        <label>All LO DK Product Groups</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_LO_FI_Product_Groups</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Product_Article_ID__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Sales_Area__c</columns>
        <columns>Business_Area_Name__c</columns>
        <columns>Business_Area_ID__c</columns>
        <columns>Assortment__c</columns>
        <columns>Assortment_ID__c</columns>
        <columns>Dummy_Three_Name__c</columns>
        <columns>Dummy_Three_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>Product Group</value>
        </filters>
        <filters>
            <field>Sales_Area__c</field>
            <operation>equals</operation>
            <value>LO FI</value>
        </filters>
        <label>All LO FI Product Groups</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_LO_NO_Product_Groups</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Product_Article_ID__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Sales_Area__c</columns>
        <columns>Business_Area_Name__c</columns>
        <columns>Business_Area_ID__c</columns>
        <columns>Assortment__c</columns>
        <columns>Assortment_ID__c</columns>
        <columns>Dummy_Three_Name__c</columns>
        <columns>Dummy_Three_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>Product Group</value>
        </filters>
        <filters>
            <field>Sales_Area__c</field>
            <operation>equals</operation>
            <value>LO NO</value>
        </filters>
        <label>All LO NO Product Groups</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_LO_SE_Product_Groups</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Product_Article_ID__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Sales_Area__c</columns>
        <columns>Business_Area_Name__c</columns>
        <columns>Business_Area_ID__c</columns>
        <columns>Assortment__c</columns>
        <columns>Assortment_ID__c</columns>
        <columns>Dummy_Three_Name__c</columns>
        <columns>Dummy_Three_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>Product Group</value>
        </filters>
        <filters>
            <field>Sales_Area__c</field>
            <operation>equals</operation>
            <value>LO SE</value>
        </filters>
        <label>All LO SE Product Groups</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_ME_SE_Product_Groups</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Product_Article_ID__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Sales_Area__c</columns>
        <columns>Business_Area_Name__c</columns>
        <columns>Business_Area_ID__c</columns>
        <columns>Assortment__c</columns>
        <columns>Assortment_ID__c</columns>
        <columns>Dummy_Three_Name__c</columns>
        <columns>Dummy_Three_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>Product Group</value>
        </filters>
        <filters>
            <field>Sales_Area__c</field>
            <operation>equals</operation>
            <value>ME SE</value>
        </filters>
        <label>All ME SE Product Groups</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Product_Groups</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Product_Article_ID__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Sales_Area__c</columns>
        <columns>Business_Area_Name__c</columns>
        <columns>Business_Area_ID__c</columns>
        <columns>Assortment__c</columns>
        <columns>Assortment_ID__c</columns>
        <columns>Dummy_Three_Name__c</columns>
        <columns>Dummy_Three_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>Product Group</value>
        </filters>
        <label>All Product Groups</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Service_Areas</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Product_Article_ID__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Sales_Area__c</columns>
        <columns>Business_Area_Name__c</columns>
        <columns>Business_Area_ID__c</columns>
        <columns>Assortment__c</columns>
        <columns>Assortment_ID__c</columns>
        <columns>Dummy_Three_Name__c</columns>
        <columns>Dummy_Three_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>Service Area</value>
        </filters>
        <label>All Service Areas</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Product_Family</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Product_Article_ID__c</columns>
        <columns>Product_Type__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Assortment__c</columns>
        <columns>Product_Level_4_Name__c</columns>
        <columns>Sales_Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>notEqual</operation>
        </filters>
        <label>Product Family View</label>
        <language>en_US</language>
    </listViews>
</CustomObject>